# MonkeyAI

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: cleanup-runs.yml  deploy.yml  load.yml  mini-app-cd.yml  mini-app-ci.yml  mini-app.yml  monkey-cd.yml  monkey-ci.yml  release.yml
api/: Dockerfile  alembic.ini  main.py  newrelic.ini
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py  0002_retention_reactions.py  0003_dialog_title.py  0004_generated_images.py  0005_dialog_pinned.py  0006_timestamps_not_null.py
api/src/core/: config.py  logger.py  ratelimit.py  redis.py  security.py
api/src/db/: db.py
api/src/monitoring/: prometheus.py
api/src/routes/: chat.py  dialogs.py  health.py  media.py  redis_cache.py  users.py  webapp.py  ws.py
api/src/schemas/: chat.py  dialog.py  media.py  user.py
api/src/services/: image.py  image_generation.py  image_processing.py  messages.py  moderation.py  openai.py  retention.py  title.py  voice.py  whitelist.py
api/tests/: conftest.py  test_api_health.py
api/tests/api/: test_endpoints_and_auth.py
api/tests/routes/: conftest.py  test_chat_routes.py  test_dialogs_routes.py  test_media_routes.py  test_users_routes.py  test_users_routes_extended.py  test_webapp_extended.py  test_webapp_routes.py  test_ws_handlers.py  test_ws_routes.py  test_ws_routes_extended.py
api/tests/unit/: test_config.py  test_db_module.py  test_db_repositories.py  test_dialogs_crud.py  test_dialogs_repo_extended.py  test_image_services.py  test_logger.py  test_moderation.py  test_openai_extended.py  test_openai_service.py  test_ratelimit.py  test_redis_module.py  test_retention.py  test_security.py  test_security_extended.py  test_title.py  test_users_helpers.py  test_voice.py  test_webapp_helpers.py  test_whitelist.py
bot/: Dockerfile  main.py  newrelic.ini
bot/src/bot/: commands.py
bot/src/core/: auth_state.py  bot.py  config.py  logger.py  user_cache.py
bot/src/locales/: de.yml  en.yml  es.yml  fr.yml  pl.yml  pt.yml  ru.yml  test.yml  tr.yml
bot/src/monitoring/: heartbeat.py  newrelic_helpers.py  prometheus.py  restart.py  system_info.py  tg_session.py
bot/src/schemas/: __init__.py  user.py
bot/src/services/: api_client.py
bot/src/utils/: __init__.py  admin.py  formatting.py  localization.py  rich_builder.py  rich_panel.py  stickers.py
bot/src/webhook/: app.py  router.py
bot/tests/: conftest.py  test_bot_health.py  test_miniapp_locale_keys.py
bot/tests/security/: test_auth_and_admin.py
bot/tests/unit/: test_about_router.py  test_admin_restart.py  test_admin_router.py  test_admin_status_extended.py  test_admin_system.py  test_admin_utils.py  test_api_client_complete.py  test_auth_state.py  test_auth_state_complete.py  test_bot_config.py  test_bot_core.py  test_bot_locale_keys.py  test_bot_logger.py  test_chat_router.py  test_formatting.py  test_help_router.py  test_keyboards.py  test_localization.py  test_localization_coverage.py  test_localization_keys.py  test_middleware_auth.py  test_middleware_i18n.py  test_middleware_newrelic.py  test_middleware_throttling.py  (+18 more)
configs/: chat_modes.example.yml  chat_modes.yml  config.yml  models.yml  user-ids.example.yml  user-ids.yml  version.yml
deployment/backup/: Dockerfile  entrypoint.sh  pg_backup.sh
deployment/cloudflared/: cert.pem  config.yml
deployment/loki/: loki-config.yml
deployment/prometheus/: prometheus.yml
deployment/promtail/: promtail-config.yml
e2e/: conftest.py  test_api_webapp.py
mini-app/: .gitignore  Dockerfile  env.d.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts
mini-app/public/: version.json
mini-app/src/: App.vue  errorHandler.ts  init.ts  main.ts  mockEnv.ts
tests/e2e/: conftest.py  test_api_chat.py  test_bot_to_api.py  test_message_count.py
tests/load/: common.py  locust_load.py  locust_spike.py  locust_stress.py  mock_openai.py  shapes.py
tests/security/: conftest.py  test_auth_bypass.py  test_idor.py  test_input_validation.py  test_secrets_leak.py  test_service_token.py
(+76 files in other folders)
