[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monkey-ai"
version = "2.9.43"
description = "MAKE MONKEY AI GREAT AGAIN!"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==25.1.0",
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "newrelic==11.4.0",
    "pillow>=10.3.0",
    "prometheus-client==0.22.1",
    "pydantic==2.7.4",
    "pydantic-settings==2.2",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "redis==5.2.1",
    "tenacity==9.1.4",
    "uvicorn[standard]==0.46.0",
]

[project.optional-dependencies]
api = [
    "alembic==1.16.5",
    "asyncpg==0.31.0",
    "openai==2.33.0",
    "python-multipart==0.0.20",
    "sqlalchemy[asyncio]==2.0.49",
]
bot = [
    "aiogram==3.27.0",
    "asyncssh==2.22.0",
    "cryptography==46.0.0",
    "docker==7.1.0",
    "msgspec==0.21.1",
    "psutil==7.2.2",
    "pyotp==2.9.0",
    "telegram-init-data[fastapi]==1.0.2",
]

[dependency-groups]
dev = [
    "coverage==7.13.5",
    "faker==40.15.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-mock==3.14.0",
    "ruff==0.15.6",
]

[tool.coverage.run]
branch = true
source = ["api/src", "bot/src"]
omit = [
    "api/main.py",
    "bot/main.py",
    "*/__init__.py",
    "*/monitoring/*",
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@overload",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [".venv", "mini-app"]

[tool.ruff.lint]
# Start with unused imports only; expand to F/E/I when codebase is cleaned up.
select = ["F401"]
